--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Tom Dyson",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config ./client/webpack.config.js",
-    "watch": "webpack --config ./client/webpack.config.js --watch"
+    "build": "npx webpack --config ./client/webpack.config.js",
+    "watch": "npx webpack --config ./client/webpack.config.js --watch",
+    "dist": "npm install && npx webpack --config ./client/webpack.config.js"
   },
   "babel": {
     "presets": [
